--- a/vignettes/Exposure.Rmd
+++ b/vignettes/Exposure.Rmd
@@ -87,10 +87,10 @@ The PUCs are assigned to products and indicate the type of product associated to
 
 List Presence Keywords communicate information contained in the Chemical Presence documents in ChemExpo. Information in these documents details use of chemicals and may be sourced from a variety of federal and state agencies and trade associations. List keywords may be used in the chemical records and are updated from the original set developed for the Chemical and Product Categories (CPDat) database [Dionisio et al. (2015)](https://www.sciencedirect.com/science/article/pii/S2214750014001632?via%3Dihub). For the most up to date information on the current List Presence keywords, see [Koval et al. (2022)](https://www.nature.com/articles/s41370-022-00451-8).
 
+Functional Use Categories describe the function a specific chemical serves. Standardized categories and definitions have been developed by the Organization for Economic Co-operation and Development [(OECD)](https://one.oecd.org/document/ENV/JM/MONO(2017)14/en/pdf). As it becomes necessary to augment the current set of categories, new function categories will be added. Originally developed and released in the Functional Use (FuSE) database now maintained within CPDat. These form the bases for ORD's Quantitative Structure Use Relationship (QSUR) models [Phillips et al. (2016)](https://pubs.rsc.org/en/content/articlelanding/2017/GC/C6GC02744J).
 
 
-
-Information is sourced from
+Information for ChemExpo is sourced from
 
 Sakshi Handa, Katherine A. Phillips, Kenta Baron-Furuyama, and Kristin K. Isaacs. 2023. “ChemExpo Knowledgebase User Guide”. https://comptox.epa.gov/chemexpo/static/user_guide/index.html.
 
