--- a/vignettes/Bioactivity.Rmd
+++ b/vignettes/Bioactivity.Rmd
@@ -100,7 +100,7 @@ Specific assays may be searched as well as all available assays that have data.
 `get_annotation_by_aeid()` retrieves annotation for a specific assay endpoint id (aeid).
 
 ```{r ccdR annotation by aeid, message=FALSE, eval=FALSE}
-res_dt <- get_annotation_by_aeid(AEID = "891", API_key = apikey, Server = url)
+res_dt <- get_annotation_by_aeid(AEID = "891")
 # optionally perform this unnest, apply names_repair = "unique" to give a unique column name
 # note - the gene column may be an array of multiple genes rather than just one, meaning this step may not work
 #res_dt <- res_dt |> tidyr::unnest_wider(col = c("citation", "gene", "assayList"), names_repair = "unique")
@@ -115,7 +115,7 @@ printFormattedTable(head(res_dt), c(4, 18, 33, 51)) # printed using custom forma
 `get_all_assays()` retrieves all annotations for all assays available. Optionally, the user can unnest "citation", "gene", "assayList" wider so each element has its own column.
 
 ```{r ccdR all assays, message=FALSE, eval=FALSE}
-res_dt <- get_all_assays(API_key = apikey, Server = url)
+res_dt <- get_all_assays()
 # optionally perform the following unnest, apply names_repair = "unique" to give a unique column name
 # note - the gene column may be an array of multiple genes rather than just one, meaning this step may not work
 #res_dt <- res_dt |> tidyr::unnest_wider(col = c("citation", "gene", "assayList"), names_repair = "unique")
@@ -134,7 +134,7 @@ There are several resources for retrieving bioactivity data associated with a va
 `get_bioactivity_summary()` retrieves a summary of the number of active hits compared to the total number tested for both multiple and single concentration by aeid.
 
 ```{r ccdR summary by aeid, message=FALSE, eval=FALSE}
-res_dt <- get_bioactivity_summary(AEID = "891", API_key = apikey, Server = url)
+res_dt <- get_bioactivity_summary(AEID = "891")
 ```
 
 ```{r, echo=FALSE, eval=FALSE}
@@ -148,7 +148,7 @@ printFormattedTable(head(res_dt), c()) # printed using custom formatted table
 ##### By spid
 
 ```{r ccdR data by spid, message=FALSE, results = FALSE, eval=FALSE}
-res_dt <- get_bioactivity_details(SPID = "TP0001055F12", API_key = apikey, Server = paste0(url, "/data"))
+res_dt <- get_bioactivity_details(SPID = "TP0001055F12")
 ```
 
 ```{r, echo=FALSE, eval=FALSE}
@@ -158,7 +158,7 @@ printFormattedTable(head(res_dt), c(ncol(res_dt)-2)) # printed using custom form
 ##### By m4id
 
 ```{r ccdR data by m4id, message=FALSE, results = FALSE, eval=FALSE}
-res_dt <- get_bioactivity_details(m4id = 739695, API_key = apikey, Server = paste0(url, "/data"))
+res_dt <- get_bioactivity_details(m4id = 739695)
 ```
 
 ```{r, echo=FALSE, eval=FALSE}
@@ -168,7 +168,7 @@ printFormattedTable(head(res_dt), c(ncol(res_dt)-2)) # printed using custom form
 ##### By DTXSID
 
 ```{r ccdR data by dtxsid, message=FALSE, results = FALSE, eval=FALSE}
-res_dt <- get_bioactivity_details(DTXSID = "DTXSID7020182", API_key = apikey, Server = paste0(url, "/data"))
+res_dt <- get_bioactivity_details(DTXSID = "DTXSID7020182")
 ```
 
 ```{r, echo=FALSE, eval=FALSE}
@@ -178,7 +178,7 @@ printFormattedTable(head(res_dt), c(ncol(res_dt)-2)) # printed using custom form
 ##### By aeid
 
 ```{r ccdR data by aeid, message=FALSE, results = FALSE, eval=FALSE}
-res_dt <- get_bioactivity_details(AEID = "891", API_key = apikey, Server = paste0(url, "/data"))
+res_dt <- get_bioactivity_details(AEID = "891")
 ```
 
 ```{r, echo=FALSE, eval=FALSE}
