--- a/vignettes/Exposure.Rmd
+++ b/vignettes/Exposure.Rmd
@@ -71,7 +71,7 @@ registerS3method(
 
 ## Introduction
 
-In this vignette, the [CCTE Exposure APIs](https://api-ccte.epa.gov/docs/exposure.html) will be explored. 
+In this vignette, the [CTED Exposure APIs](https://api-ccte.epa.gov/docs/exposure.html) will be explored. 
 
 ::: {.noticebox data-latex=""}
 
@@ -93,7 +93,7 @@ Sakshi Handa, Katherine A. Phillips, Kenta Baron-Furuyama, and Kristin K. Isaacs
 
 ## Functions
 
-Several ccdR functions are used to access the CCTE Exposure API data.
+Several ccdR functions are used to access the CTED Exposure API data.
 
 ### Functional Use Resource
 
@@ -174,9 +174,33 @@ head(data.table::as.data.table(exp_list_tags_dat))
 
 There are batch search versions for several endpoints that gather data specific to a chemical. Namely, `get_exposure_functional_use_batch()`, `get_exposure_functional_use_probability()`, `get_exposure_product_data_batch()`, and `get_exposure_list_presence_tags_by_dtxsid_batch()`. The function `get_exposure_functional_use_probability()` returns a data.table with each row corresponding to a unique chemical and each column representing a functional use category associated to at least one input chemical. The other three batch functions return a named list of data.frames, the names corresponding to the unique chemicals input and the data.frames corresponding to the information to each individual chemical.
 
+#### Functional use probability batch
+
+We demonstrate how the individual results differ from the batch results when retrieving functional use probabilities.
+
+```{r}
+bpa_prob <- get_exposure_functional_use_probability(DTXSID = 'DTXSID7020182')
+caf_prob <- get_exposure_functional_use_probability(DTXSID = 'DTXSID0020232')
+
+bpa_caf_prob <- get_exposure_functional_use_probability_batch(DTXSID = c('DTXSID7020182', 'DTXSID0020232'))
+```
+
+```{r, echo=FALSE}
+bpa_prob
+```
+```{r, echo=FALSE}
+caf_prob
+```
+```{r, echo=FALSE}
+bpa_caf_prob
+```
+
+Observe that Caffeine only has probabilities assigned to four functional use categories while Bisphenol A has probabilities assigned to twelve categories. For single chemical search, functional use categories denote the row. However, when using the batch search function, all reported categories are included as columns, with rows corresponding to each chemical. If a chemical does not have a probability associated to a functional use, the corresponding entry is given by an NA.
+
+
 ## Conclusion
 
-There are several CCTE `Exposure` API endpoints and ccdR contains functions for each, and batch versions for some of these as well. These allow users to access various types of exposure data associated to a given chemical. In this vignette, we explored all of the non-batch versions and discussed the batch versions. We encourage the user to experiment with the different endpoints to understand better what sorts of data are available.
+There are several CTED `Exposure` API endpoints and ccdR contains functions for each, and batch versions for some of these as well. These allow users to access various types of exposure data associated to a given chemical. In this vignette, we explored all of the non-batch versions and discussed the batch versions. We encourage the user to experiment with the different endpoints to understand better what sorts of data are available.
 
 ```{r breakdown, echo = FALSE, results = 'hide'}
 # This chunk will be hidden in the final product. It serves to undo defining the
